syntax = "proto3";
import "user.proto";

package pb;

option go_package = "github.com/kwalter26/udemy-simplebank/pb";

message UpdateUserRequest {
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

